<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_options"
        android:title="@string/action_options"
        android:orderInCategory="110"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_alpha"
        android:title="@string/action_alpha"
        android:orderInCategory="120"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_background"
        android:title="@string/action_background"
        android:orderInCategory="130"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_position"
        android:title="@string/action_position"
        android:orderInCategory="130"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rotation"
        android:title="@string/action_rotation"
        android:orderInCategory="140"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_complex"
        android:title="@string/action_complex"
        android:orderInCategory="150"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_frame"
        android:title="@string/action_frame"
        android:orderInCategory="150"
        app:showAsAction="never"/>
</menu>